--- a/recipes/mne-python_1.2/construct.yaml
+++ b/recipes/mne-python_1.2/construct.yaml
@@ -74,7 +74,7 @@ specs:
   - mne-ari =0.1.1
   - mne-kit-gui =1.0.1
   - mne-icalabel =0.4  # [not win]
-  - mnelab =0.8.5
+  - mnelab =0.8.5  # [not arm64]  # https://github.com/conda-forge/pyside2-feedstock/issues/159
   - autoreject =0.4.0
   - pyprep =0.4.2
   - openmeeg =2.5.5
