Use QT_DEBUG_PLUGINS instead of LD_DEBUG

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -413,10 +413,10 @@ jobs:
           fi
 
           echo "Checking whether PyQt5 is working"
-          LD_DEBUG=libs python -c "from PyQt5.QtWidgets import QApplication, QWidget; app = QApplication([])"
+          QT_DEBUG_PLUGINS=1 python -c "from PyQt5.QtWidgets import QApplication, QWidget; app = QApplication([])"
 
           echo "Checking whether PySide6 is working"
-          LD_DEBUG=libs python -c "from PySide6.QtWidgets import QApplication, QWidget; app = QApplication([])"
+          QT_DEBUG_PLUGINS=1 python -c "from PySide6.QtWidgets import QApplication, QWidget; app = QApplication([])"
 
           echo "Checking the deployed environment variables were set correctly upon environment activation"
           mamba env config vars list
