TST: Pin to release version

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -112,7 +112,7 @@ jobs:
 
       - name: Hotfix for NSIS
         run: |
-          mamba install nsis=3.01 conda=4.12a
+          mamba install nsis=3.01 conda=4.12a mamba=1.1.0
         if: ${{ runner.os == 'Windows' }}
 
       - name: Extract version information
