--- a/environment.yml
+++ b/environment.yml
@@ -5,8 +5,8 @@ channels:
   - conda-forge
 
 dependencies:
-  - constructor =3.3a=*_21
-  - conda-standalone =4.12a=*_9
-  - menuinst =2.0a=14_g594d642_*
-  - conda =4.12a
+  - constructor
+  - conda-standalone
+  - menuinst
+  - conda
   - mamba
