--- a/environment.yml
+++ b/environment.yml
@@ -1,12 +1,12 @@
 name: constructor-env
 
 channels:
-  - napari/label/bundle_tools_2
+  - napari/label/bundle_tools
   - conda-forge
 
 dependencies:
-  - constructor
-  - conda-standalone
-  - menuinst
-  - conda
-  - mamba
+  - constructor =3.3a=*_21
+  - conda-standalone =4.12a=*_9
+  - menuinst =2.0a=14_g594d642_*
+  - conda =4.12a
+  - mamba =1.1.0
