--- a/recipes/mne-python_1.3/construct.yaml
+++ b/recipes/mne-python_1.3/construct.yaml
@@ -47,7 +47,7 @@ menu_packages:
 channels:
   - conda-forge
   # conda-forge doesn't provide pytorch packages for Windows
-  - pytorch  # [win]
+  # - pytorch  # [win]
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: COMMENT OUT BEFORE RELEASE! ⛔️ ⛔️ ⛔️
   # - conda-forge/label/mne_dev
   # - conda-forge/label/mne-bids_dev
@@ -75,7 +75,7 @@ specs:
   - mne-rsa =0.8
   - mne-ari =0.1.2
   - mne-kit-gui =1.1.0
-  - mne-icalabel =0.4
+  - mne-icalabel =0.4  # [not win]
   - autoreject =0.4.1
   - pyprep =0.4.2
   - openmeeg =2.5.5
@@ -137,7 +137,7 @@ specs:
 condarc:
   channels:
     - conda-forge
-    - pytorch  # [win]
+    # - pytorch  # [win]
   channel_priority: strict
   allow_other_channels: False
   env_prompt: "(mne-1.3.0_1) "
