--- a/recipes/mne-python_1.3/construct.yaml
+++ b/recipes/mne-python_1.3/construct.yaml
@@ -1,4 +1,4 @@
-version: 1.3.0_0
+version: 1.3.0_1
 name: MNE-Python
 company: MNE-Python Developers
 # When the version above changes to a new major/minor, it needs to be updated
@@ -18,17 +18,17 @@ initialize_by_default: False
 register_python_default: False
 
 # default_prefix will be ignored by macOS .pkg installer!
-default_prefix: ${HOME}/mne-python/1.3.0_0                          # [linux]
-default_prefix: "%USERPROFILE%\\mne-python\\1.3.0_0"                # [win]
-default_prefix_domain_user: "%LOCALAPPDATA%\\mne-python\\1.3.0_0"   # [win]
-default_prefix_all_users: "%ALLUSERSPROFILE%\\mne-python\\1.3.0_0"  # [win]
+default_prefix: ${HOME}/mne-python/1.3.0_1                          # [linux]
+default_prefix: "%USERPROFILE%\\mne-python\\1.3.0_1"                # [win]
+default_prefix_domain_user: "%LOCALAPPDATA%\\mne-python\\1.3.0_1"   # [win]
+default_prefix_all_users: "%ALLUSERSPROFILE%\\mne-python\\1.3.0_1"  # [win]
 
 uninstall_name: MNE-Python ${VERSION} (Python ${PYVERSION})
 
-installer_filename: MNE-Python-1.3.0_0-macOS_Intel.pkg  # [osx and not arm64]
-installer_filename: MNE-Python-1.3.0_0-macOS_M1.pkg     # [osx and arm64]
-installer_filename: MNE-Python-1.3.0_0-Windows.exe      # [win]
-installer_filename: MNE-Python-1.3.0_0-Linux.sh         # [linux]
+installer_filename: MNE-Python-1.3.0_1-macOS_Intel.pkg  # [osx and not arm64]
+installer_filename: MNE-Python-1.3.0_1-macOS_M1.pkg     # [osx and arm64]
+installer_filename: MNE-Python-1.3.0_1-Windows.exe      # [win]
+installer_filename: MNE-Python-1.3.0_1-Linux.sh         # [linux]
 
 post_install: ../../assets/post_install_macOS.sh        # [osx]
 post_install: ../../assets/post_install_linux.sh        # [linux]
@@ -77,6 +77,7 @@ specs:
   - autoreject =0.4.1
   - pyprep =0.4.2
   - openmeeg =2.5.5
+  - pyriemann 0.4
   # Python
   - python =3.10.8
   - pip
@@ -137,4 +138,4 @@ condarc:
     - conda-forge
   channel_priority: strict
   allow_other_channels: False
-  env_prompt: "(mne-1.3.0_0) "
+  env_prompt: "(mne-1.3.0_1) "
