Drop build numbers

--- a/environment.yml
+++ b/environment.yml
@@ -5,8 +5,8 @@ channels:
   - conda-forge
 
 dependencies:
-  - constructor =4.0b9=*_1
-  - conda-standalone =22.11.1.post1=*_5
-  - menuinst =2.0a=*_41
-  - conda =22.11.1.post1=*_1
+  - constructor =4.0b9
+  - conda-standalone =22.11.1.post1
+  - menuinst =2.0a
+  - conda =22.11.1.post1
   - mamba
