--- a/recipes/mne-python_1.3/construct.yaml
+++ b/recipes/mne-python_1.3/construct.yaml
@@ -77,6 +77,7 @@ specs:
   - mne-kit-gui =1.1.0
   - mne-icalabel =0.4  # [not win]
   - autoreject =0.4.1
+  - pyriemann =0.4
   - pyprep =0.4.2
   - openmeeg =2.5.5
   # Python
@@ -136,8 +137,8 @@ specs:
 
 condarc:
   channels:
-    - conda-forge
     # - pytorch  # [win]
+    - conda-forge
   channel_priority: strict
   allow_other_channels: False
   env_prompt: "(mne-1.3.0_1) "
