--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,14 +24,14 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: macos-11
-            arch: x86_64
+          #- os: macos-11
+          #  arch: x86_64
 
-          - os: macos-11
-            arch: arm64
+          #- os: macos-11
+          #  arch: arm64
 
-          - os: ubuntu-20.04
-            arch: x86_64
+          #- os: ubuntu-20.04
+          #  arch: x86_64
 
           - os: windows-2019
             arch: x86_64
