--- a/recipes/mne-python_1.4/construct.yaml
+++ b/recipes/mne-python_1.4/construct.yaml
@@ -49,7 +49,7 @@ channels:
   # conda-forge doesn't provide pytorch packages for Windows
   # - pytorch  # [win]
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: COMMENT OUT BEFORE RELEASE! ⛔️ ⛔️ ⛔️
-  # - conda-forge/label/mne_dev
+  - conda-forge/label/mne_dev
   # - conda-forge/label/mne-bids_dev
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: COMMENT OUT BEFORE RELEASE! ⛔️ ⛔️ ⛔️
 
@@ -57,14 +57,14 @@ specs:
   # MNE ecosystem
 
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
-  # - mne =1.2dev0=*_20221007
-  # - mne-installer-menus =1.2dev0=*_20221007
+  - mne =1.4dev0=*_20230410
+  - mne-installer-menus =1.4dev0=*_20230410
   # - mne-bids =0.11dev0=*_20221007
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
 
   # TODO: Once 1.4 is actually released, bump these
-  - mne =1.3.1=*_0
-  - mne-installer-menus =1.3.1=*_0
+  # - mne =1.3.1=*_0
+  # - mne-installer-menus =1.3.1=*_0
   - mne-bids =0.12.0
   - mne-bids-pipeline =1.2.0
   - mne-qt-browser =0.5.0
@@ -85,7 +85,7 @@ specs:
   - python =3.10.8
   - pip =23.0.1
   - conda =23.3.1
-  - mamba =1.4.1
+  - mamba =1.4.2
   - openblas =0.3.21
   - jupyter =1.0.0
   - jupyterlab =3.6.3
@@ -121,7 +121,7 @@ specs:
   - sleepecg =0.5.3
   - yasa =0.6.3
   # various biological signals (ECG, EOG, EMG, …)
-  - neurokit2 =0.2.3
+  - neurokit2 =0.2.4
   # GitHub client, https://cli.github.com
   - gh =2.25.1
   # NeuroSpin needs the following
