ENH: Add git and make for Windows

--- a/recipes/mne-python_1.4/construct.yaml
+++ b/recipes/mne-python_1.4/construct.yaml
@@ -80,13 +80,13 @@ specs:
   - autoreject =0.4.1
   - pyriemann =0.4
   - pyprep =0.4.2
-  - openmeeg =2.5.5
+  - openmeeg =2.5.6
   # Python
   - python =3.10.8
-  - pip =23.0.1
+  - pip =23.1.2
   - conda =23.3.1
-  - mamba =1.4.1
-  - openblas =0.3.21
+  - mamba =1.4.2
+  - openblas =0.3.23
   - jupyter =1.0.0
   - jupyterlab =3.6.3
   - ipykernel =6.22.0
@@ -104,7 +104,7 @@ specs:
   # MRI
   - fsleyes =1.6.1 # [not win]
   - fsleyes =1.6.0 # [win]
-  - dcm2niix =1.0.20220720
+  - dcm2niix =1.0.20230411
   # Time-frequency analysis
   - pactools =0.3.1
   - tensorpac =0.6.5
@@ -118,10 +118,10 @@ specs:
   # OpenNeuro.org data access
   - openneuro-py =2022.4.0
   # sleep staging
-  - sleepecg =0.5.3
+  - sleepecg =0.5.4
   - yasa =0.6.3
   # various biological signals (ECG, EOG, EMG, …)
-  - neurokit2 =0.2.3
+  - neurokit2 =0.2.4
   # GitHub client, https://cli.github.com
   - gh =2.25.1
   # NeuroSpin needs the following
@@ -134,6 +134,8 @@ specs:
   - plotly =5.14.1
   - vtk =9.2.6  # [arm64 or not osx]
   - vtk =9.2.5  # [osx and not arm64]
+  - git =2.40.1  # [win]
+  - make =4.3  # [win]
   - ipywidgets =8.0.6
 
 condarc:
