WIP: Bump versions

--- a/recipes/mne-python_1.4/construct.yaml
+++ b/recipes/mne-python_1.4/construct.yaml
@@ -49,7 +49,7 @@ channels:
   # conda-forge doesn't provide pytorch packages for Windows
   # - pytorch  # [win]
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: COMMENT OUT BEFORE RELEASE! ⛔️ ⛔️ ⛔️
-  # - conda-forge/label/mne_dev
+  - conda-forge/label/mne_dev
   # - conda-forge/label/mne-bids_dev
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: COMMENT OUT BEFORE RELEASE! ⛔️ ⛔️ ⛔️
 
@@ -57,14 +57,14 @@ specs:
   # MNE ecosystem
 
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
-  # - mne =1.2dev0=*_20221007
-  # - mne-installer-menus =1.2dev0=*_20221007
+  - mne =1.4dev0=*_20230503
+  - mne-installer-menus =1.4dev0=*_20230503
   # - mne-bids =0.11dev0=*_20221007
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
 
   # TODO: Once 1.4 is actually released, bump these
-  - mne =1.3.1=*_0
-  - mne-installer-menus =1.3.1=*_0
+  # - mne =1.3.1=*_0
+  # - mne-installer-menus =1.3.1=*_0
   - mne-bids =0.12.0
   - mne-bids-pipeline =1.2.0
   - mne-qt-browser =0.5.0
@@ -77,12 +77,13 @@ specs:
   - mne-ari =0.1.2
   - mne-kit-gui =1.1.0
   - mne-icalabel =0.4  # [not win]
+  - mne-gui-addons =0.2.0
   - autoreject =0.4.1
   - pyriemann =0.4
   - pyprep =0.4.2
   - openmeeg =2.5.6
   # Python
-  - python =3.10.8
+  - python =3.11.3
   - pip =23.1.2
   - conda =23.3.1
   - mamba =1.4.2
@@ -95,15 +96,16 @@ specs:
   - spyder =5.4.3
   - darkdetect =0.8.0
   - qdarkstyle =3.1
+  # TODO: Enable this once 3.11 packages land
+  # - numba
   # Excel I/O
-  - openpyxl =3.1.1
+  - openpyxl =3.1.2
   - xlrd =2.0.1
   # Statistics
   - pingouin =0.5.3
   - pycircstat =0.0.2
   # MRI
-  - fsleyes =1.6.1 # [not win]
-  - fsleyes =1.6.0 # [win]
+  - fsleyes =1.6.1
   - dcm2niix =1.0.20230411
   # Time-frequency analysis
   - pactools =0.3.1
@@ -132,8 +134,7 @@ specs:
   - ipympl =0.9.3
   - seaborn =0.12.2
   - plotly =5.14.1
-  - vtk =9.2.6  # [arm64 or not osx]
-  - vtk =9.2.5  # [osx and not arm64]
+  - vtk =9.2.6
   - git =2.40.1  # [win]
   - make =4.3  # [win]
   - ipywidgets =8.0.6
