--- a/recipes/mne-python_1.4/construct.yaml
+++ b/recipes/mne-python_1.4/construct.yaml
@@ -67,12 +67,12 @@ specs:
   # - mne-installer-menus =1.3.1=*_0
   - mne-bids =0.12.0
   - mne-bids-pipeline =1.2.0
-  - mne-qt-browser =0.5.0
+  # - mne-qt-browser =0.5.0  # TODO: wait for https://github.com/conda-forge/mne-qt-browser-feedstock/pull/23
   - mne-connectivity =0.5.0
   - mne-faster =1.1.0
   - mne-nirs =0.5.0
   - mne-realtime =0.2.0
-  - mne-features =0.2.1
+  # - mne-features =0.2.1  # TODO: requires numba
   - mne-rsa =0.8
   - mne-ari =0.1.2
   - mne-kit-gui =1.1.0
@@ -96,8 +96,7 @@ specs:
   - spyder =5.4.3
   - darkdetect =0.8.0
   - qdarkstyle =3.1
-  # TODO: Enable this once 3.11 packages land
-  # - numba
+  # - numba  # TODO: wait for https://github.com/conda-forge/numba-feedstock/pull/115
   # Excel I/O
   - openpyxl =3.1.2
   - xlrd =2.0.1
@@ -109,8 +108,8 @@ specs:
   - dcm2niix =1.0.20230411
   # Time-frequency analysis
   - pactools =0.3.1
-  - tensorpac =0.6.5
-  - emd =0.5.5
+  # - tensorpac =0.6.5  # TODO: requires numba
+  # - emd =0.5.5  # TODO: wait for a new release because https://github.com/conda-forge/emd-feedstock/pull/8 can't (easily) overcome the setup.py version pin
   - neurodsp =2.2.0
   - bycycle =1.0.0
   - fooof =1.0.0
@@ -120,8 +119,8 @@ specs:
   # OpenNeuro.org data access
   - openneuro-py =2022.4.0
   # sleep staging
-  - sleepecg =0.5.4
-  - yasa =0.6.3
+  # - sleepecg =0.5.4  # TODO: wait for numba, then restart and wait for https://github.com/conda-forge/sleepecg-feedstock/pull/20
+  # - yasa =0.6.3  # TODO: wait for sleepecg and tensorpac
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2 =0.2.4
   # GitHub client, https://cli.github.com
