MAINT: Back to 3.10

--- a/recipes/mne-python_1.4/construct.yaml
+++ b/recipes/mne-python_1.4/construct.yaml
@@ -72,7 +72,7 @@ specs:
   - mne-faster =1.1.0
   - mne-nirs =0.5.0
   - mne-realtime =0.2.0
-  # - mne-features =0.2.1  # TODO: requires numba
+  - mne-features =0.2.1  # TODO: requires numba
   - mne-rsa =0.8
   - mne-ari =0.1.2
   - mne-kit-gui =1.1.0
@@ -83,7 +83,7 @@ specs:
   - pyprep =0.4.2
   - openmeeg =2.5.6
   # Python
-  - python =3.11.3
+  - python =3.10.10
   - pip =23.1.2
   - conda =23.3.1
   - mamba =1.4.2
@@ -96,7 +96,7 @@ specs:
   - spyder =5.4.3
   - darkdetect =0.8.0
   - qdarkstyle =3.1
-  # - numba  # TODO: wait for https://github.com/conda-forge/numba-feedstock/pull/115
+  - numba =0.56.4  # TODO: need https://github.com/conda-forge/numba-feedstock/pull/115 for 3.11
   # Excel I/O
   - openpyxl =3.1.2
   - xlrd =2.0.1
@@ -109,8 +109,8 @@ specs:
   - dcm2niix =1.0.20230411
   # Time-frequency analysis
   - pactools =0.3.1
-  # - tensorpac =0.6.5  # TODO: requires numba
-  # - emd =0.5.5  # TODO: wait for a new release because https://github.com/conda-forge/emd-feedstock/pull/8 can't (easily) overcome the setup.py version pin
+  - tensorpac =0.6.5  # TODO: requires numba
+  - emd =0.5.5  # TODO: wait for a new release because https://github.com/conda-forge/emd-feedstock/pull/8 can't (easily) overcome the setup.py version pin
   - neurodsp =2.2.0
   - bycycle =1.0.0
   - fooof =1.0.0
@@ -120,8 +120,8 @@ specs:
   # OpenNeuro.org data access
   - openneuro-py =2022.4.0
   # sleep staging
-  # - sleepecg =0.5.4  # TODO: wait for numba, then restart and wait for https://github.com/conda-forge/sleepecg-feedstock/pull/20
-  # - yasa =0.6.3  # TODO: wait for sleepecg and tensorpac
+  - sleepecg =0.5.4  # TODO: wait for numba, then restart and wait for https://github.com/conda-forge/sleepecg-feedstock/pull/20
+  - yasa =0.6.3  # TODO: wait for sleepecg and tensorpac
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2 =0.2.4
   # GitHub client, https://cli.github.com
@@ -134,7 +134,8 @@ specs:
   - ipympl =0.9.3
   - seaborn =0.12.2
   - plotly =5.14.1
-  - vtk =9.2.6
+  - vtk =9.2.6  # [arm64 or not osx]
+  - vtk =9.2.5  # [osx and not arm64]
   - git =2.40.1  # [win]
   - make =4.3  # [win]
   - ipywidgets =8.0.6
