--- a/recipes/mne-python_1.4/construct.yaml
+++ b/recipes/mne-python_1.4/construct.yaml
@@ -49,7 +49,7 @@ channels:
   # conda-forge doesn't provide pytorch packages for Windows
   # - pytorch  # [win]
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: COMMENT OUT BEFORE RELEASE! ⛔️ ⛔️ ⛔️
-  - conda-forge/label/mne_dev
+  # - conda-forge/label/mne_dev
   # - conda-forge/label/mne-bids_dev
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: COMMENT OUT BEFORE RELEASE! ⛔️ ⛔️ ⛔️
 
@@ -57,14 +57,13 @@ specs:
   # MNE ecosystem
 
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
-  - mne =1.4dev0=*_20230503
-  - mne-installer-menus =1.4dev0=*_20230503
+  # - mne =1.4dev0=*_20230503
+  # - mne-installer-menus =1.4dev0=*_20230503
   # - mne-bids =0.11dev0=*_20221007
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
 
-  # TODO: Once 1.4 is actually released, bump these
-  # - mne =1.3.1=*_0
-  # - mne-installer-menus =1.3.1=*_0
+  - mne =1.4.0=*_0
+  - mne-installer-menus =1.4.0=*_0
   - mne-bids =0.12.0
   - mne-bids-pipeline =1.2.0
   - mne-qt-browser =0.5.0
