--- a/recipes/mne-python_1.4/construct.yaml
+++ b/recipes/mne-python_1.4/construct.yaml
@@ -97,7 +97,8 @@ specs:
   - darkdetect =0.8.0
   - qdarkstyle =3.1
   - numba =0.57.0
-  # Excel I/O
+  # I/O
+  - pyxdf =1.16.4
   - openpyxl =3.1.2
   - xlrd =2.0.1
   # Statistics
